--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewListTitle" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewCompletedArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
@@ -45,9 +45,9 @@
         android:text="@string/completed"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewCompletedArrow"
+        app:layout_constraintStart_toEndOf="@+id/imageViewCompletedArrow"
+        app:layout_constraintTop_toTopOf="@+id/imageViewCompletedArrow" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCompletedTasks"
