--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -2,16 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintCategory"
     android:paddingVertical="20dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:onClick="onClickSetCategory">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textViewCategoryTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dasdsad"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewCategoryRadio"
         app:layout_constraintStart_toStartOf="parent" />
